--- a/index.html
+++ b/index.html
@@ -126,87 +126,104 @@
     <section id="stack">
       <div class="container">
         <h2 class="section-title">Tech Stack</h2>
+        <p class="section-sub-title">Mobile Development</p>
+        <div class="row">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/java.png" alt="java" height="51" />
+                <span class="text-center">Java</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/firebase.png" alt="Firebase" height="55" />
+                <span class="text-center">Firebase</span>
+              </div>
+            </div>
+          </div>
+        </div>
         <p class="section-sub-title">Web Development</p>
-        <div class="container cards-container">
+        <div class="row">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/html.png" alt="html" height="68" />
+                <span class="text-center">HTML</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/css.png" alt="css" height="66" />
+                <span class="text-center">CSS</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/javascript.png" alt="javascript" height="66" />
+                <span class="text-center">JavaScript</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/python.png" alt="python" height="66" />
+                <span class="text-center">Python</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/django.png" alt="django" height="75" />
+                <span class="text-center">Django</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/php.png" alt="php" height="50" />
+                <!--<span class="text-center">PHP</span>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/mysql.png" alt="mysql" height="50" />
+                <!--<span class="text-center">MySQL</span>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/power-bi.svg" alt="powerbi" height="69" />
+                <span class="text-center">Power Bi</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/aws.svg" alt="aws" height="68" />
+                <!--<span class="text-center">AWS</span>-->
+              </div>
+            </div>
+          </div>
           <div class="row">
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/html.png" alt="html" height="68" />
-                  <span class="text-center">HTML</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/css.png" alt="css" height="66" />
-                  <span class="text-center">CSS</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/javascript.png" alt="javascript" height="66" />
-                  <span class="text-center">JavaScript</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/python.png" alt="python" height="66" />
-                  <span class="text-center">Python</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/django.png" alt="django" height="75" />
-                  <span class="text-center">Django</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/php.png" alt="php" height="50" />
-                  <!--<span class="text-center">PHP</span>-->
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/mysql.png" alt="mysql" height="50" />
-                  <!--<span class="text-center">MySQL</span>-->
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/power-bi.svg" alt="powerbi" height="69" />
-                  <span class="text-center">PowerBi</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-              <div class="card">
-                <div class="card-body">
-                  <img src="img/aws.svg" alt="aws" height="68" />
-                  <!--<span class="text-center">AWS</span>-->
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <p class="more-skills">
-                I am familiar with Android development, Java, C / C++, Sass and
-                GCP (Google Cloud Platform). I am currently learning Vue.js.
-              </p>
-            </div>
+            <p class="more-skills">
+              I am familiar with Android development, Java, C / C++, Sass and
+              GCP (Google Cloud Platform). I am currently learning Vue.js.
+            </p>
           </div>
         </div>
       </div>
@@ -341,15 +358,15 @@
                   <p class="card-text">
                     This is a python
                     <span class="color-red"> Django blog</span> that allows
-                    <span class="color-red">authenticated</span> users to write
-                    and post blog articles. Authors are allowed to create, read,
-                    update or even delete their articles (<span
-                      class="color-red"
+                    <span class="color-red">authenticated</span> users to post
+                    blog articles. Authors are allowed to create, read, update
+                    and delete their articles (<span class="color-red"
                       >CRUD</span
                     >). This web application allows any logged in user to leave
-                    a comment for each article. There is also a reset password
-                    feature for users who forget their passwords. Styling is
-                    done by <span class="color-red">bootstrap</span>.
+                    a comment for each article. There is also a password reset
+                    feature. Styling is done by
+                    <span class="color-red">bootstrap</span>. I am learning
+                    Vue.js to transform the look and feel of this site.
                   </p>
                   <p class="card-text">
                     The admin has rights to edit or delete any article or
@@ -384,15 +401,16 @@
                 <div></div>
                 <div class="p-2">
                   <p class="card-text">
-                    This GitHub repo contains most of my Machine Learning
-                    mini-projects, and those I encountered while taking the
+                    This GitHub repo contains jupyter notebooks for my Machine
+                    Learning projects, and those I encountered while taking the
                     <a
                       href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
                       target="_blank"
                       >DeepLearning.ai Tensorflow Professional Certificate</a
-                    >.
+                    >. I am getting into MLops to deploy them into real world
+                    applications.
                   </p>
-                  <p class="card-text">Mini-Projects here include:</p>
+                  <p class="card-text">Projects here include:</p>
                   <ul>
                     <li>Computer Vision - Convolutional Neural Networks</li>
                     <li>Computer Vision - Detecting Horses vs Humans</li>
@@ -524,7 +542,7 @@
             </div>
             <div class="col-12 col-md-4"><p>Naivasha, Kenya</p></div>
             <div class="col-12 col-md-4">
-              <div class="socials-container">
+              <div class="socials-container mx-auto">
                 <a
                   href="https://www.twitter.com/devdenmau"
                   class="social-container"
