rephrase my skills

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
           </div>
           <div class="row">
             <p class="more-skills">
-              I am familiar with Android development, Java, C / C++, Sass and
-              GCP (Google Cloud Platform). I am currently learning Vue.js.
+              I have a solid grasp of Data Structures and Algorithms, having learned them in Java. I am currently learning
+              Vue.js.
             </p>
           </div>
         </div>
