--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
           </div>
           <div class="row">
             <p class="more-skills">
-              I have a solid grasp of Data Structures and Algorithms, having learned them in Java. I am currently learning
-              Vue.js.
+              I have a solid grasp of Data Structures & Algorithms (learned them
+              in Java). I am currently learning Vue.js.
             </p>
           </div>
         </div>
@@ -325,19 +325,17 @@
                       month.</small
                     >
                   </p>
-                  <div class="text-center">
-                    <a
-                      href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
-                      class="btn btn-primary"
-                      target="_blank"
-                      >Download</a
-                    >
-                    <a
-                      href="https://www.github.com/denmau/foodfit"
-                      class="btn btn-secondary"
-                      >View code</a
-                    >
-                  </div>
+                  <a
+                    href="https://www.github.com/denmau/foodfit"
+                    class="btn btn-primary"
+                    >View code</a
+                  >
+                  <a
+                    href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
+                    class="btn btn-secondary"
+                    target="_blank"
+                    >Download App</a
+                  >
                 </div>
               </div>
             </div>
@@ -379,19 +377,17 @@
                     </small>
                   </p>
                 </div>
-                <div class="text-center">
-                  <a
-                    href="http://denmaublog.herokuapp.com"
-                    class="btn btn-primary"
-                    target="_blank"
-                    >Live Site</a
-                  >
-                  <a
-                    href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                    class="btn btn-secondary"
-                    >View code</a
-                  >
-                </div>
+                <a
+                  href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                  class="btn btn-primary"
+                  >View code</a
+                >
+                <a
+                  href="http://denmaublog.herokuapp.com"
+                  class="btn btn-secondary"
+                  target="_blank"
+                  >View Live Site</a
+                >
               </div>
             </div>
           </div>
@@ -486,7 +482,7 @@
                   rounded
                 "
               >
-                <span>Send Message</span>
+                Send Message
               </button>
             </div>
           </form>
