--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
                     />
                   </div>
                 </div>
-                <div class="p-2">
                   <p class="card-text">
                     Food Fit is a Java
                     <span class="color-red">Android App</span> that gives you
@@ -327,32 +326,26 @@
                   </p>
                   <a
                     href="https://www.github.com/denmau/foodfit"
-                    class="btn btn-primary"
+                    class="card-link"
                     >View code</a
                   >
                   <a
                     href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
-                    class="btn btn-secondary"
+                    class="card-link"
                     target="_blank"
                     >Download App</a
                   >
-                </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-6">
             <div class="card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-12">
-                    <img
+              <img
                       src="img/django-blog.png"
                       alt="Django Blog"
-                      class="img-thumbnail"
+                      class="card-img-top border border-success"
                     />
-                  </div>
-                </div>
-                <div class="p-2">
+              <div class="card-body">                  
                   <p class="card-text">
                     This is a python
                     <span class="color-red"> Django blog</span> that allows
@@ -376,15 +369,14 @@
                       <span class="color-red">PostgreSQL</span> Database.
                     </small>
                   </p>
-                </div>
                 <a
                   href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                  class="btn btn-primary"
+                  class="card-link"
                   >View code</a
                 >
                 <a
                   href="http://denmaublog.herokuapp.com"
-                  class="btn btn-secondary"
+                  class="card-link"
                   target="_blank"
                   >View Live Site</a
                 >
@@ -394,7 +386,6 @@
           <div class="col-12 col-sm-12 col-md-12 col-lg-6">
             <div class="card">
               <div class="card-body">
-                <div></div>
                 <div class="p-2">
                   <p class="card-text">
                     This GitHub repo contains jupyter notebooks for my Machine
@@ -406,7 +397,7 @@
                     >. I am getting into MLops to deploy them into real world
                     applications.
                   </p>
-                  <p class="card-text">Projects here include:</p>
+                  <p class="card-text">Projects here include:
                   <ul>
                     <li>Computer Vision - Convolutional Neural Networks</li>
                     <li>Computer Vision - Detecting Horses vs Humans</li>
@@ -415,10 +406,10 @@
                       article
                     </li>
                     <li>Time Series & Predictions - Working with stock data</li>
-                  </ul>
+                  </ul></p>
                   <a
                     href="https://github.com/denmau/tensorflow-practice"
-                    class="btn btn-primary"
+                    class="card-link"
                     >View on GiHub</a
                   >
                 </div>
