change links styling

--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
                   </p>
                   <a
                     href="https://www.github.com/denmau/foodfit"
-                    class="card-link"
+                    class="btn btn-primary"
                     >View code</a
                   >
                   <a
                     href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
-                    class="card-link"
+                    class="btn btn-secondary"
                     target="_blank"
                     >Download App</a
                   >
@@ -371,12 +371,12 @@
                   </p>
                 <a
                   href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                  class="card-link"
+                  class="btn btn-primary"
                   >View code</a
                 >
                 <a
                   href="http://denmaublog.herokuapp.com"
-                  class="card-link"
+                  class="btn btn-secondary"
                   target="_blank"
                   >View Live Site</a
                 >
@@ -409,7 +409,7 @@
                   </ul></p>
                   <a
                     href="https://github.com/denmau/tensorflow-practice"
-                    class="card-link"
+                    class="btn btn-primary"
                     >View on GiHub</a
                   >
                 </div>
