--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
             <div class="col-6 col-sm-6 col-md-4 col-lg-2">
                 <div class="card">
                     <div class="card-body">
+                        <img src="img/vuejs.png" alt="vue.js" height="70"/>
+                        <span class="text-center">Vue.js</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+                <div class="card">
+                    <div class="card-body">
                         <img src="img/python.png" alt="python" height="66"/>
                         <span class="text-center">Python</span>
                     </div>
@@ -222,7 +230,7 @@
             <div class="row">
                 <p class="more-skills">
                     I have a solid grasp of Data Structures & Algorithms (learned them
-                    in Java). I am currently learning Vue.js.
+                    in Java & C#).
                 </p>
             </div>
         </div>
