fix broken links

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                         >View Live Site</a
                         >
                         <a
-                                href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                                href="https://github.com/denmau/django-blog"
                                 class="btn btn-secondary"
                         >View code</a
                         >
