change twitter handle

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                 <div class="col-12 col-md-4">
                     <div class="socials-container mx-auto">
                         <a
-                                href="https://www.twitter.com/devdenmau"
+                                href="https://www.twitter.com/iamdenmau"
                                 class="social-container"
                         >
                             <img
