--- a/emojistore/index.html
+++ b/emojistore/index.html
@@ -52,6 +52,8 @@
     <br />
 
     <div class="container">
+        <p>I will finish this site in one day</p>
+        <p>Please provide me with the images and links to app store and Play accounts.</p>
       <img src="/img/design picture.png" class="img-thumbnail" alt="" />
     </div>
 
