--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                                 class="badge rounded-pill bg-primary"
                                 onclick="document.location.href='#contact';"
                         >
-                  Available For Work</span
+                  Its my Birthday!</span
+                  <!-- Available For Work</span -->
                         >
                     </p>
                 </div>
