--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                     >MAU</span
                     >
                         <span
-                                class="badge rounded-pill bg-primary"
+                                class="badge rounded-pill bg-success"
                                 onclick="document.location.href='#contact';"
                         >
-                  Its my Birthday!</span
-                  <!-- Available For Work</span -->
-                        >
+                  Its my Birthday!</span>
+                  <!-- Available For Work</span> -->
+                        
                     </p>
                 </div>
                 <div class="hero-text">
