remove birthday update

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                                 class="badge rounded-pill bg-success"
                                 onclick="document.location.href='#contact';"
                         >
-                  Its my Birthday!</span>
-                  <!-- Available For Work</span> -->
-                        
+                  Available For Work<!</span>                        
                     </p>
                 </div>
                 <div class="hero-text">
