remove available for work badge

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                             class="color-red"
                     >MAU</span
                     >
-                        <span
+                        <!-- <span
                                 class="badge rounded-pill bg-success"
                                 onclick="document.location.href='#contact';"
                         >
-                  Available For Work<!</span>                        
+                  Available For Work</span>                         -->
                     </p>
                 </div>
                 <div class="hero-text">
