--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                 <div class="col-12 col-md-4">
                     <p>All rights reserved | Copyright © 2021</p>
                 </div>
-                <div class="col-12 col-md-4"><p>Naivasha, Kenya</p></div>
+                <div class="col-12 col-md-4"><p>Nairobi, Kenya</p></div>
                 <div class="col-12 col-md-4">
                     <div class="socials-container mx-auto">
                         <a
