update whatsapp link

--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
                 <div
                         class="social-container"
                         style="cursor: pointer"
-                        onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
+                        onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20services';"
+
                 >
                     <img src="img/iconmonstr-whatsapp.svg" alt="email"/>
                 </div>
