--- a/index.html
+++ b/index.html
@@ -510,14 +510,13 @@
                         class="social-container"
                         style="cursor: pointer"
                         onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20services';"
-
                 >
                     <img src="img/iconmonstr-whatsapp.svg" alt="email"/>
                 </div>
                 <div
                         class="color-black"
                         style="cursor: pointer"
-                        onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
+                        onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20services';"
                 >
                     <span class="ml-1"></span>+254759360020
                 </div>
