--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div>
                     <p class="about-me-summary animate__animated animate__fadeIn">
-                        I am a Full Stack Machine Learning Engineer based in Kenya. I
+                        I am a Full Stack Machine Learning Engineer based in Nairobi Kenya. I
                         have been fortunate to have worked alongside senior developers
                         who I envy and draw inspiration from. This has taught me to
                         write code that is maintainable, easy to reuse and understand.
@@ -135,14 +135,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <!-- <div class="col-6 col-sm-6 col-md-4 col-lg-2">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/firebase.png" alt="Firebase" height="55"/>
                         <span class="text-center">Firebase</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <p class="section-sub-title">Web Development</p>
         <div class="row">
@@ -363,8 +363,7 @@
                         >). This web application allows any logged in user to leave
                             a comment for each article. There is also a password reset
                             feature. Styling is done by
-                            <span class="color-red">bootstrap</span>. I am learning
-                            Vue.js to transform the look and feel of this site.
+                            <span class="color-red">bootstrap</span>.
                         </p>
                         <p class="card-text">
                             The admin has rights to edit or delete any article or
