add flutter as skill

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-2">
                 <div class="card">
                     <div class="card-body">
-                        <img src="img/firebase.png" alt="Firebase" height="55"/>
-                        <span class="text-center">Firebase</span>
+                        <img src="img/flutter.svg" alt="Firebase" height="55"/>
+                        <span class="text-center">Flutter</span>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
         <p class="section-sub-title">Web Development</p>
         <div class="row">
