--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                     method="post"
             >
                 <div class="row">
-                    <label for="your_name" class="form-label">Name</label>
+                    <label for="your_name" class="form-label">Name <span class="form-required">*</span></label>
                     <input
                             required
                             type="text"
@@ -450,7 +450,7 @@
                     />
                 </div>
                 <div class="row">
-                    <label for="your_email" class="form-label">Email</label>
+                    <label for="your_email" class="form-label">Email <span class="form-required">*</span></label>
                     <input
                             required
                             type="email"
@@ -461,7 +461,7 @@
                     />
                 </div>
                 <div class="row">
-                    <label for="your_message" class="form-label">Message</label>
+                    <label for="your_message" class="form-label">Message <span class="form-required">*</span></label>
                     <textarea
                             required
                             name="message"
