add favicon and logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/jpg" href="./img/favicon.ico" />
     <meta
       name="description"
       content=">I am a Full-Stack ML Engineer based in Kenya. My speciality is Machine Learning, Python Django with Vue.js & Android development."
@@ -51,7 +53,12 @@
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg background-black">
       <div class="container">
-        <a href="https://www.denmau.me" class="branding active">Denmau</a>
+        <a href="https://www.denmau.me" class="branding active">
+          <div class="d-flex">
+            <img src="./img/logo.png" alt="logo" height="20rem" class="mr-1" />
+            Denmau
+          </div>
+        </a>
 
         <button
           class="navbar-toggler"
