made a cleaner UI of my tech skills

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <p class="section-sub-title">Web Development</p>
         <div class="row">
-          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+          <!-- <div class="col-6 col-sm-6 col-md-4 col-lg-2">
             <div class="card">
               <div class="card-body">
                 <img src="img/html.png" alt="html" height="68" />
@@ -169,7 +169,7 @@
                 <span class="text-center">CSS</span>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-6 col-sm-6 col-md-4 col-lg-2">
             <div class="card">
               <div class="card-body">
@@ -186,14 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
-            <div class="card">
-              <div class="card-body">
-                <img src="img/python.png" alt="python" height="66" />
-                <span class="text-center">Python</span>
-              </div>
-            </div>
-          </div>
+          
           <div class="col-6 col-sm-6 col-md-4 col-lg-2">
             <div class="card">
               <div class="card-body">
@@ -207,6 +200,18 @@
               <div class="card-body">
                 <img src="img/php.png" alt="php" height="50" />
                 <!--<span class="text-center">PHP</span>-->
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        <p class="section-sub-title">Data & Storage</p>
+        <div class="row">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/python.png" alt="python" height="66" />
+                <span class="text-center">Python</span>
               </div>
             </div>
           </div>
