--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@
             </div>
             <div>
               <p class="about-me-summary animate__animated animate__fadeIn">
-                I am a Full Stack Machine Learning Engineer based in Nairobi
-                Kenya. I have been fortunate to have worked alongside senior
-                developers who I envy and draw inspiration from. This has taught
-                me to write code that is maintainable, easy to reuse and
-                understand.
+                I am a software engineer with frontend and backend skills. Today, I am focused on delivering APIs that scale.
+                I also enjoy working on Machine Learning projects. When am not coding I am enjoying a voleyball match or listening to a podcast. 
               </p>
             </div>
           </div>
