--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
             </div>
             <div>
               <p class="about-me-summary animate__animated animate__fadeIn">
-                I am a software engineer with frontend and backend skills. Today, I am focused on delivering APIs that scale.
-                I also enjoy working on Machine Learning projects. When am not coding I am enjoying a voleyball match or listening to a podcast. 
+                I am a software engineer with frontend and backend skills.
+                Today, I am focused on delivering APIs that scale. I also enjoy
+                working on Machine Learning projects. When am not coding I am
+                enjoying a voleyball match or listening to a podcast.
               </p>
             </div>
           </div>
@@ -612,5 +614,21 @@
       src="https://static.cloudflareinsights.com/beacon.min.js"
       data-cf-beacon='{"token":"7c6a28636ca84f3b9c71d413ca7fd007"}'
     ></script>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function() {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/612e79bbd6e7610a49b2f635/1feeon4m7";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
   </body>
 </html>
