--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
               </p>
             </div>
             <div>
-              <p class="about-me-summary animate__animated animate__fadeIn">
-                I am a software engineer with frontend and backend skills.
-                Today, I am focused on delivering APIs that scale. I also enjoy
-                working on Machine Learning projects. When am not coding I am
-                enjoying a voleyball match or listening to a podcast.
+              <p class="about-me-summary animate__animated animate__fadeIn"></p>
+              I am a software engineer with frontend and backend skills. Today,
+              I am focused on delivering APIs that scale. I enjoy working on
+              machine learning/AI projects with TensorFlow. My skillset spans
+              from building mobile apps with Flutter, Web frontends with Vue.js
+              and the backend with Django or PHP.
               </p>
             </div>
           </div>
