--- a/index.html
+++ b/index.html
@@ -116,12 +116,13 @@
               </p>
             </div>
             <div>
-              <p class="about-me-summary animate__animated animate__fadeIn"></p>
-              I am a software engineer with frontend and backend skills. Today,
-              I am focused on delivering APIs that scale. I enjoy working on
-              machine learning/AI projects with TensorFlow. My skillset spans
-              from building mobile apps with Flutter, Web frontends with Vue.js
-              and the backend with Django or PHP.
+              <p class="about-me-summary animate__animated animate__fadeIn">
+                I am a software engineer with frontend and backend skills.
+                Today, I am focused on delivering APIs that scale. I am a
+                certified TensorFlow Developer. My skillset spans from building
+                mobile apps with Flutter, Web frontends with Vue.js and the
+                backend with Django or PHP while serving ML models with
+                TensorFlow.
               </p>
             </div>
           </div>
@@ -233,6 +234,18 @@
           <div class="col-6 col-sm-6 col-md-4 col-lg-2">
             <div class="card">
               <div class="card-body">
+                <img
+                  src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/38536516"
+                  alt="tensorflow"
+                  height="70"
+                />
+                <!--<span class="text-center">AWS</span>-->
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-2">
+            <div class="card">
+              <div class="card-body">
                 <img src="img/aws.svg" alt="aws" height="68" />
                 <!--<span class="text-center">AWS</span>-->
               </div>
@@ -287,9 +300,9 @@
           >. I enjoy building Machine Learning models with Tensorflow.
         </p>
         <p>
-          I am currently preparing and looking into getting
-          <a href="https://www.tensorflow.org/certificate" target="_blank"
-            >Tensorflow certified</a
+          I am certified a
+          <a href="https://www.credential.net/8730c2d3-8e01-4b9b-b385-ef535b0438a5" target="_blank"
+            >Tensorflow developer</a
           >.
         </p>
       </div>
