--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 Today, I am focused on delivering APIs that scale. I am a
                 certified TensorFlow Developer. My skillset spans from building
                 mobile apps with Flutter, Web frontends with Vue.js and the
-                backend with Django or PHP while serving ML models with
+                backend with Django or PHP while serving Machine Learning models with
                 TensorFlow.
               </p>
             </div>
@@ -239,7 +239,7 @@
                   alt="tensorflow"
                   height="70"
                 />
-                <!--<span class="text-center">AWS</span>-->
+                <span class="text-center">TensorFlow</span>
               </div>
             </div>
           </div>
