rephrased my introductory paragraph

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 Today, I am focused on delivering APIs that scale. I am a
                 certified TensorFlow Developer. My skillset spans from building
                 mobile apps with Flutter, Web frontends with Vue.js and the
-                backend with Django or PHP while serving Machine Learning models with
-                TensorFlow.
+                backend with Django or PHP while serving Machine Learning models
+                with TensorFlow.
               </p>
             </div>
           </div>
@@ -293,19 +293,13 @@
         </div>
 
         <p>
-          I am a certified
-          <a
-            href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
-            >DeepLearning.ai Tensorflow Developer</a
-          >. I enjoy building Machine Learning models with Tensorflow.
-        </p>
-        <p>
-          I am certified a
+          I am a Tensorflow certified
           <a
             href="https://www.credential.net/8730c2d3-8e01-4b9b-b385-ef535b0438a5"
             target="_blank"
-            >Tensorflow developer</a
-          >.
+            >Machine Learning Engineer</a
+          >. I enjoying building, optimizing and deploying models with
+          TensorFlow, Keras, openCV and more.
         </p>
       </div>
     </section>
