--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             href="https://www.credential.net/8730c2d3-8e01-4b9b-b385-ef535b0438a5"
             target="_blank"
             >Machine Learning Engineer</a
-          >. I enjoying building, optimizing and deploying models with
+          >. I enjoy building, optimizing and deploying models with
           TensorFlow, Keras, openCV and more.
         </p>
       </div>
