update bio to match LinkedIn

--- a/index.html
+++ b/index.html
@@ -119,10 +119,13 @@
               <p class="about-me-summary animate__animated animate__fadeIn">
                 I am a software engineer with frontend and backend skills.
                 Today, I am focused on delivering APIs that scale. I am a
-                certified TensorFlow Developer. My skillset spans from building
-                mobile apps with Flutter, Web frontends with Vue.js and the
-                backend with Django or PHP while serving Machine Learning models
-                with TensorFlow.
+                certified TensorFlow Developer and I enjoy building and serving
+                Machine Learning models with TensorFlow. My skillset spans from
+                building mobile apps with Flutter and Java, Web frontends with
+                Vue.js and the backend with Django or PHP. I have experience
+                with containers (Docker), API intergration and setting up
+                deployment pipelines on Heroku, Amazon Web Services (AWS) and
+                Google Cloud Platform (GCP).
               </p>
             </div>
           </div>
@@ -298,8 +301,8 @@
             href="https://www.credential.net/8730c2d3-8e01-4b9b-b385-ef535b0438a5"
             target="_blank"
             >Machine Learning Engineer</a
-          >. I enjoy building, optimizing and deploying models with
-          TensorFlow, Keras, openCV and more.
+          >. I enjoy building, optimizing and deploying models with TensorFlow,
+          Keras, openCV and more.
         </p>
       </div>
     </section>
