--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a class="nav-link" href="https://www.denmau.me">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="assets/Dennis_Kamau_CV.pdf"
+              <a class="nav-link active" href="assets/Resume-Dennis-Kamau.pdf"
                 >Resume</a
               >
             </li>
