update meta data for SEO

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="title" content="Dennis Kamau | Full Stack Software Engineer" />
     <meta
       name="description"
-      content="I am a Full-Stack TensorFlow-certified Machine Learning Engineer based in Nairobi, Kenya. My primary focus is on building Software, Mobile Applications and Machine Learning (ML) applications using TensorFlow."
+      content="I am a Full-Stack TensorFlow-certified Machine Learning Engineer based in Nairobi, Kenya. My primary focus is building Softwares and Mobile Applications with Artificial Intelligence & Machine Learning."
     />
     <meta name="author" content="Dennis Kamau" />
 
