--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
               <p>All rights reserved | Copyright © 2021</p>
             </div>
             <div class="col-12 col-md-4">
-              <p>Nairobi, Kenya</p>
+              <p>Westlands, Nairobi, Kenya</p>
             </div>
             <div class="col-12 col-md-4">
               <div class="socials-container mx-auto">
