updated year in footer

--- a/index.html
+++ b/index.html
@@ -563,14 +563,14 @@
             <div
               class="social-container"
               style="cursor: pointer"
-              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20services';"
+              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20development%20services';"
             >
               <img src="img/iconmonstr-whatsapp.svg" alt="email" />
             </div>
             <div
               class="color-black"
               style="cursor: pointer"
-              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20services';"
+              onclick="window.location='https://api.whatsapp.com/send?phone=254759360020?text=I%20am%20interested%20in%20your%20development%20services';"
             >
               <span class="ml-1"></span>+254759360020
             </div>
@@ -587,7 +587,7 @@
         <div class="container color-white text-center">
           <div class="row">
             <div class="col-12 col-md-4">
-              <p>All rights reserved | Copyright © 2021</p>
+              <p>All rights reserved | 2022</p>
             </div>
             <div class="col-12 col-md-4">
               <p>Westlands, Nairobi, Kenya</p>
