--- a/index.html
+++ b/index.html
@@ -547,16 +547,16 @@
             <div
               class="social-container"
               style="cursor: pointer"
-              onclick="window.location='mailto:dmkamau475@gmail.com';"
+              onclick="window.location='mailto:dennis@denmau.me';"
             >
               <img src="img/iconmonstr-email.svg" alt="" />
             </div>
             <div
               class="color-black"
               style="cursor: pointer"
-              onclick="window.location='mailto:dmkamau475@gmail.com';"
+              onclick="window.location='mailto:dennis@denmau.me';"
             >
-              <span class="ml-1"></span>dmkamau475@gmail.com
+              <span class="ml-1"></span>dennis@denmau.me
             </div>
           </div>
           <div class="col">
@@ -627,7 +627,7 @@
                   />
                 </a>
 
-                <a href="mailto:dmkamau475@gmail.com" class="social-container">
+                <a href="mailto:dennis@denmau.me" class="social-container">
                   <img src="img/iconmonstr-email.svg" alt="email" height="15" />
                 </a>
               </div>
